# Langulus

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Empty.cpp  InitializeGitSubmodule.cmake  LangulusUtilities.cmake  README.md  todo.md  todo.txt
.github/workflows/: ci.yml
docs/: index.md  todo.md
framework/: CMakeLists.txt  CMakeSettings.json  Langulus.cpp
framework/test/: CMakeLists.txt  Main.cpp  Main.hpp  TestModule.cpp
framework/testmodule/: CMakeLists.txt  Main.cpp  Main.hpp
include/: Langulus.hpp
mods/: CMakeLists.txt
test/: CMakeLists.txt  Main.cpp  Main.hpp  TestModule.cpp
testmodule/: CMakeLists.txt  Main.cpp  Main.hpp
