langulus_init_git_submodule(Mod-FileSystem)
add_subdirectory(Mod-FileSystem)
langulus_init_git_submodule(Mod-GLFW)
add_subdirectory(Mod-GLFW)
langulus_init_git_submodule(Mod-ImGui)
add_subdirectory(Mod-ImGui)
langulus_init_git_submodule(Mod-Vulkan)
add_subdirectory(Mod-Vulkan)
langulus_init_git_submodule(Mod-Assets-Images)
add_subdirectory(Mod-Assets-Images)
langulus_init_git_submodule(Mod-Assets-Geometry)
add_subdirectory(Mod-Assets-Geometry)
langulus_init_git_submodule(Mod-Assets-Materials)
add_subdirectory(Mod-Assets-Materials)
